Rework rx dataflows